@@ -208,11 +208,11 @@ public class MutableValueGraphAdapterTest
         assertEquals(3, g.degreeOf("v4"));
         assertEquals(3, g.degreeOf("v5"));
 
-        assertEquals(Set.of(e12), g.edgesOf("v1"));
-        assertEquals(Set.of(e12, e23, e24, e52), g.edgesOf("v2"));
-        assertEquals(Set.of(e23), g.edgesOf("v3"));
-        assertEquals(Set.of(e24, e44), g.edgesOf("v4"));
-        assertEquals(Set.of(e52, e55), g.edgesOf("v5"));
+        assertEquals(new HashSet<>(Arrays.asList(e12)), g.edgesOf("v1"));
+        assertEquals(new HashSet<>(Arrays.asList(e12, e23, e24, e52)), g.edgesOf("v2"));
+        assertEquals(new HashSet<>(Arrays.asList(e23)), g.edgesOf("v3"));
+        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.edgesOf("v4"));
+        assertEquals(new HashSet<>(Arrays.asList(e52, e55)), g.edgesOf("v5"));
 
         assertEquals(0, g.inDegreeOf("v1"));
         assertEquals(2, g.inDegreeOf("v2"));
@@ -220,11 +220,11 @@ public class MutableValueGraphAdapterTest
         assertEquals(2, g.inDegreeOf("v4"));
         assertEquals(1, g.inDegreeOf("v5"));
 
-        assertEquals(Set.of(), g.incomingEdgesOf("v1"));
-        assertEquals(Set.of(e12, e52), g.incomingEdgesOf("v2"));
-        assertEquals(Set.of(e23), g.incomingEdgesOf("v3"));
-        assertEquals(Set.of(e24, e44), g.incomingEdgesOf("v4"));
-        assertEquals(Set.of(e55), g.incomingEdgesOf("v5"));
+        assertEquals(new HashSet<>(Arrays.asList()), g.incomingEdgesOf("v1"));
+        assertEquals(new HashSet<>(Arrays.asList(e12, e52)), g.incomingEdgesOf("v2"));
+        assertEquals(new HashSet<>(Arrays.asList(e23)), g.incomingEdgesOf("v3"));
+        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.incomingEdgesOf("v4"));
+        assertEquals(new HashSet<>(Arrays.asList(e55)), g.incomingEdgesOf("v5"));
 
         assertEquals(1, g.outDegreeOf("v1"));
         assertEquals(2, g.outDegreeOf("v2"));
@@ -232,11 +232,11 @@ public class MutableValueGraphAdapterTest
         assertEquals(1, g.outDegreeOf("v4"));
         assertEquals(2, g.outDegreeOf("v5"));
 
-        assertEquals(Set.of(e12), g.outgoingEdgesOf("v1"));
-        assertEquals(Set.of(e23, e24), g.outgoingEdgesOf("v2"));
-        assertEquals(Set.of(), g.outgoingEdgesOf("v3"));
-        assertEquals(Set.of(e44), g.outgoingEdgesOf("v4"));
-        assertEquals(Set.of(e52, e55), g.outgoingEdgesOf("v5"));
+        assertEquals(new HashSet<>(Arrays.asList(e12)), g.outgoingEdgesOf("v1"));
+        assertEquals(new HashSet<>(Arrays.asList(e23, e24)), g.outgoingEdgesOf("v2"));
+        assertEquals(new HashSet<>(Arrays.asList()), g.outgoingEdgesOf("v3"));
+        assertEquals(new HashSet<>(Arrays.asList(e44)), g.outgoingEdgesOf("v4"));
+        assertEquals(new HashSet<>(Arrays.asList(e52, e55)), g.outgoingEdgesOf("v5"));
     }
 
     /**
@@ -275,11 +275,11 @@ public class MutableValueGraphAdapterTest
         assertEquals(3, g.degreeOf("v4"));
         assertEquals(3, g.degreeOf("v5"));
 
-        assertEquals(Set.of(e12), g.edgesOf("v1"));
-        assertEquals(Set.of(e12, e23, e24, e52), g.edgesOf("v2"));
-        assertEquals(Set.of(e23), g.edgesOf("v3"));
-        assertEquals(Set.of(e24, e44), g.edgesOf("v4"));
-        assertEquals(Set.of(e52, e55), g.edgesOf("v5"));
+        assertEquals(new HashSet<>(Arrays.asList(e12)), g.edgesOf("v1"));
+        assertEquals(new HashSet<>(Arrays.asList(e12, e23, e24, e52)), g.edgesOf("v2"));
+        assertEquals(new HashSet<>(Arrays.asList(e23)), g.edgesOf("v3"));
+        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.edgesOf("v4"));
+        assertEquals(new HashSet<>(Arrays.asList(e52, e55)), g.edgesOf("v5"));
 
         assertEquals(1, g.inDegreeOf("v1"));
         assertEquals(4, g.inDegreeOf("v2"));
@@ -287,11 +287,11 @@ public class MutableValueGraphAdapterTest
         assertEquals(3, g.inDegreeOf("v4"));
         assertEquals(3, g.inDegreeOf("v5"));
 
-        assertEquals(Set.of(e12), g.incomingEdgesOf("v1"));
-        assertEquals(Set.of(e12, e23, e24, e52), g.incomingEdgesOf("v2"));
-        assertEquals(Set.of(e23), g.incomingEdgesOf("v3"));
-        assertEquals(Set.of(e24, e44), g.incomingEdgesOf("v4"));
-        assertEquals(Set.of(e52, e55), g.incomingEdgesOf("v5"));
+        assertEquals(new HashSet<>(Arrays.asList(e12)), g.incomingEdgesOf("v1"));
+        assertEquals(new HashSet<>(Arrays.asList(e12, e23, e24, e52)), g.incomingEdgesOf("v2"));
+        assertEquals(new HashSet<>(Arrays.asList(e23)), g.incomingEdgesOf("v3"));
+        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.incomingEdgesOf("v4"));
+        assertEquals(new HashSet<>(Arrays.asList(e52, e55)), g.incomingEdgesOf("v5"));
 
         assertEquals(1, g.outDegreeOf("v1"));
         assertEquals(4, g.outDegreeOf("v2"));
@@ -299,11 +299,11 @@ public class MutableValueGraphAdapterTest
         assertEquals(3, g.outDegreeOf("v4"));
         assertEquals(3, g.outDegreeOf("v5"));
 
-        assertEquals(Set.of(e12), g.outgoingEdgesOf("v1"));
-        assertEquals(Set.of(e12, e23, e24, e52), g.outgoingEdgesOf("v2"));
-        assertEquals(Set.of(e23), g.outgoingEdgesOf("v3"));
-        assertEquals(Set.of(e24, e44), g.outgoingEdgesOf("v4"));
-        assertEquals(Set.of(e52, e55), g.outgoingEdgesOf("v5"));
+        assertEquals(new HashSet<>(Arrays.asList(e12)), g.outgoingEdgesOf("v1"));
+        assertEquals(new HashSet<>(Arrays.asList(e12, e23, e24, e52)), g.outgoingEdgesOf("v2"));
+        assertEquals(new HashSet<>(Arrays.asList(e23)), g.outgoingEdgesOf("v3"));
+        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.outgoingEdgesOf("v4"));
+        assertEquals(new HashSet<>(Arrays.asList(e52, e55)), g.outgoingEdgesOf("v5"));
     }
 
     /**
