@@ -50,9 +50,9 @@ public class IncomingOutgoingEdgesTest
         assertTrue(g.edgeSet().size() == 1);
         assertEquals(Collections.emptySet(), g.incomingEdgesOf(1));
         assertEquals(0, g.inDegreeOf(1));
-        assertEquals(Set.of(e), g.outgoingEdgesOf(1));
+        assertEquals(new HashSet<>(Arrays.asList(e)), g.outgoingEdgesOf(1));
         assertEquals(1, g.outDegreeOf(1));
-        assertEquals(Set.of(e), g.incomingEdgesOf(2));
+        assertEquals(new HashSet<>(Arrays.asList(e)), g.incomingEdgesOf(2));
         assertEquals(1, g.inDegreeOf(2));
         assertEquals(Collections.emptySet(), g.outgoingEdgesOf(2));
         assertEquals(0, g.outDegreeOf(2));
@@ -65,9 +65,9 @@ public class IncomingOutgoingEdgesTest
         assertTrue(g.edgeSet().size() == 1);
         assertEquals(Collections.emptySet(), g.incomingEdgesOf(1));
         assertEquals(0, g.inDegreeOf(1));
-        assertEquals(Set.of(e), g.outgoingEdgesOf(1));
+        assertEquals(new HashSet<>(Arrays.asList(e)), g.outgoingEdgesOf(1));
         assertEquals(1, g.outDegreeOf(1));
-        assertEquals(Set.of(e), g.incomingEdgesOf(2));
+        assertEquals(new HashSet<>(Arrays.asList(e)), g.incomingEdgesOf(2));
         assertEquals(1, g.inDegreeOf(2));
         assertEquals(Collections.emptySet(), g.outgoingEdgesOf(2));
         assertEquals(0, g.outDegreeOf(2));
@@ -108,11 +108,11 @@ public class IncomingOutgoingEdgesTest
         assertEquals(3, g.degreeOf(4));
         assertEquals(5, g.degreeOf(5));
 
-        assertEquals(Set.of(e12), g.edgesOf(1));
-        assertEquals(Set.of(e12, e23_1, e23_2, e24, e52), g.edgesOf(2));
-        assertEquals(Set.of(e23_1, e23_2), g.edgesOf(3));
-        assertEquals(Set.of(e24, e44), g.edgesOf(4));
-        assertEquals(Set.of(e52, e55_1, e55_2), g.edgesOf(5));
+        assertEquals(new HashSet<>(Arrays.asList(e12)), g.edgesOf(1));
+        assertEquals(new HashSet<>(Arrays.asList(e12, e23_1, e23_2, e24, e52)), g.edgesOf(2));
+        assertEquals(new HashSet<>(Arrays.asList(e23_1, e23_2)), g.edgesOf(3));
+        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.edgesOf(4));
+        assertEquals(new HashSet<>(Arrays.asList(e52, e55_1, e55_2)), g.edgesOf(5));
 
         assertEquals(0, g.inDegreeOf(1));
         assertEquals(2, g.inDegreeOf(2));
@@ -120,11 +120,11 @@ public class IncomingOutgoingEdgesTest
         assertEquals(2, g.inDegreeOf(4));
         assertEquals(2, g.inDegreeOf(5));
 
-        assertEquals(Set.of(), g.incomingEdgesOf(1));
-        assertEquals(Set.of(e12, e52), g.incomingEdgesOf(2));
-        assertEquals(Set.of(e23_1, e23_2), g.incomingEdgesOf(3));
-        assertEquals(Set.of(e24, e44), g.incomingEdgesOf(4));
-        assertEquals(Set.of(e55_1, e55_2), g.incomingEdgesOf(5));
+        assertEquals(new HashSet<>(Arrays.asList()), g.incomingEdgesOf(1));
+        assertEquals(new HashSet<>(Arrays.asList(e12, e52)), g.incomingEdgesOf(2));
+        assertEquals(new HashSet<>(Arrays.asList(e23_1, e23_2)), g.incomingEdgesOf(3));
+        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.incomingEdgesOf(4));
+        assertEquals(new HashSet<>(Arrays.asList(e55_1, e55_2)), g.incomingEdgesOf(5));
 
         assertEquals(1, g.outDegreeOf(1));
         assertEquals(3, g.outDegreeOf(2));
@@ -132,11 +132,11 @@ public class IncomingOutgoingEdgesTest
         assertEquals(1, g.outDegreeOf(4));
         assertEquals(3, g.outDegreeOf(5));
 
-        assertEquals(Set.of(e12), g.outgoingEdgesOf(1));
-        assertEquals(Set.of(e23_1, e23_2, e24), g.outgoingEdgesOf(2));
-        assertEquals(Set.of(), g.outgoingEdgesOf(3));
-        assertEquals(Set.of(e44), g.outgoingEdgesOf(4));
-        assertEquals(Set.of(e52, e55_1, e55_2), g.outgoingEdgesOf(5));
+        assertEquals(new HashSet<>(Arrays.asList(e12)), g.outgoingEdgesOf(1));
+        assertEquals(new HashSet<>(Arrays.asList(e23_1, e23_2, e24)), g.outgoingEdgesOf(2));
+        assertEquals(new HashSet<>(Arrays.asList()), g.outgoingEdgesOf(3));
+        assertEquals(new HashSet<>(Arrays.asList(e44)), g.outgoingEdgesOf(4));
+        assertEquals(new HashSet<>(Arrays.asList(e52, e55_1, e55_2)), g.outgoingEdgesOf(5));
     }
 
     /**
@@ -181,23 +181,23 @@ public class IncomingOutgoingEdgesTest
         DefaultEdge e = new DefaultEdge();
         g.addEdge(1, 2, e);
         assertTrue(g.edgeSet().size() == 1);
-        assertEquals(Set.of(e), g.edgesOf(1));
+        assertEquals(new HashSet<>(Arrays.asList(e)), g.edgesOf(1));
         assertEquals(1, g.degreeOf(1));
-        assertEquals(Set.of(e), g.edgesOf(2));
+        assertEquals(new HashSet<>(Arrays.asList(e)), g.edgesOf(2));
         assertEquals(1, g.degreeOf(2));
         assertEquals(Collections.emptySet(), g.edgesOf(3));
         assertEquals(0, g.degreeOf(3));
 
         assertThrows(IntrusiveEdgeException.class, () -> g.addEdge(1, 3, e));
         assertTrue(g.edgeSet().size() == 1);
-        assertEquals(Set.of(e), g.edgesOf(1));
+        assertEquals(new HashSet<>(Arrays.asList(e)), g.edgesOf(1));
         assertEquals(1, g.degreeOf(1));
-        assertEquals(Set.of(e), g.edgesOf(2));
+        assertEquals(new HashSet<>(Arrays.asList(e)), g.edgesOf(2));
         assertEquals(1, g.degreeOf(2));
         assertEquals(Collections.emptySet(), g.edgesOf(3));
         assertEquals(0, g.degreeOf(3));
     }
-    
+
     /**
      * Test the most general version of the undirected graph.
      */
@@ -232,11 +232,11 @@ public class IncomingOutgoingEdgesTest
         assertEquals(3, g.degreeOf(4));
         assertEquals(5, g.degreeOf(5));
 
-        assertEquals(Set.of(e12), g.edgesOf(1));
-        assertEquals(Set.of(e12, e23_1, e23_2, e24, e52), g.edgesOf(2));
-        assertEquals(Set.of(e23_1, e23_2), g.edgesOf(3));
-        assertEquals(Set.of(e24, e44), g.edgesOf(4));
-        assertEquals(Set.of(e52, e55_1, e55_2), g.edgesOf(5));
+        assertEquals(new HashSet<>(Arrays.asList(e12)), g.edgesOf(1));
+        assertEquals(new HashSet<>(Arrays.asList(e12, e23_1, e23_2, e24, e52)), g.edgesOf(2));
+        assertEquals(new HashSet<>(Arrays.asList(e23_1, e23_2)), g.edgesOf(3));
+        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.edgesOf(4));
+        assertEquals(new HashSet<>(Arrays.asList(e52, e55_1, e55_2)), g.edgesOf(5));
 
         assertEquals(1, g.inDegreeOf(1));
         assertEquals(5, g.inDegreeOf(2));
@@ -244,11 +244,11 @@ public class IncomingOutgoingEdgesTest
         assertEquals(3, g.inDegreeOf(4));
         assertEquals(5, g.inDegreeOf(5));
 
-        assertEquals(Set.of(e12), g.incomingEdgesOf(1));
-        assertEquals(Set.of(e12, e23_1, e23_2, e24, e52), g.incomingEdgesOf(2));
-        assertEquals(Set.of(e23_1, e23_2), g.incomingEdgesOf(3));
-        assertEquals(Set.of(e24, e44), g.incomingEdgesOf(4));
-        assertEquals(Set.of(e52, e55_1, e55_2), g.incomingEdgesOf(5));
+        assertEquals(new HashSet<>(Arrays.asList(e12)), g.incomingEdgesOf(1));
+        assertEquals(new HashSet<>(Arrays.asList(e12, e23_1, e23_2, e24, e52)), g.incomingEdgesOf(2));
+        assertEquals(new HashSet<>(Arrays.asList(e23_1, e23_2)), g.incomingEdgesOf(3));
+        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.incomingEdgesOf(4));
+        assertEquals(new HashSet<>(Arrays.asList(e52, e55_1, e55_2)), g.incomingEdgesOf(5));
 
         assertEquals(1, g.outDegreeOf(1));
         assertEquals(5, g.outDegreeOf(2));
@@ -256,11 +256,11 @@ public class IncomingOutgoingEdgesTest
         assertEquals(3, g.outDegreeOf(4));
         assertEquals(5, g.outDegreeOf(5));
 
-        assertEquals(Set.of(e12), g.outgoingEdgesOf(1));
-        assertEquals(Set.of(e12, e23_1, e23_2, e24, e52), g.outgoingEdgesOf(2));
-        assertEquals(Set.of(e23_1, e23_2), g.outgoingEdgesOf(3));
-        assertEquals(Set.of(e24, e44), g.outgoingEdgesOf(4));
-        assertEquals(Set.of(e52, e55_1, e55_2), g.outgoingEdgesOf(5));
+        assertEquals(new HashSet<>(Arrays.asList(e12)), g.outgoingEdgesOf(1));
+        assertEquals(new HashSet<>(Arrays.asList(e12, e23_1, e23_2, e24, e52)), g.outgoingEdgesOf(2));
+        assertEquals(new HashSet<>(Arrays.asList(e23_1, e23_2)), g.outgoingEdgesOf(3));
+        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.outgoingEdgesOf(4));
+        assertEquals(new HashSet<>(Arrays.asList(e52, e55_1, e55_2)), g.outgoingEdgesOf(5));
     }
 
     /**
@@ -270,7 +270,7 @@ public class IncomingOutgoingEdgesTest
     public void testUndirectedGraph()
     {
         testUndirectedGraph(() -> new Pseudograph<>(DefaultEdge.class));
-        
+
         testAddDuplicateEdgeUndirectedGraph(
             () -> GraphTypeBuilder
                 .undirected().allowingMultipleEdges(true).allowingSelfLoops(true)
